[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Nodes/FileListingNode.gd" type="Script" id=1]

[node name="FileListingNode" type="GraphNode"]
margin_right = 185.0
margin_bottom = 125.0
title = "FileListingNode"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = true
slot/4/right_type = 3
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dir" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 169.0
margin_bottom = 48.0

[node name="StartingDir" type="LineEdit" parent="Dir"]
margin_right = 58.0
margin_bottom = 24.0
text = "."

[node name="Label" type="Label" parent="Dir"]
margin_left = 62.0
margin_top = 5.0
margin_right = 133.0
margin_bottom = 19.0
text = "Starting Dir"

[node name="FT" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 169.0
margin_bottom = 73.0

[node name="FileTypes" type="LineEdit" parent="FT"]
margin_right = 58.0
margin_bottom = 24.0
text = "*"

[node name="Label" type="Label" parent="FT"]
margin_left = 62.0
margin_top = 5.0
margin_right = 126.0
margin_bottom = 19.0
text = "File Types"

[node name="Recursive" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 74.0
margin_right = 169.0
margin_bottom = 98.0
shortcut_in_tooltip = false
text = "Recursive"

[node name="Hidden" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 99.0
margin_right = 169.0
margin_bottom = 123.0
text = "Find Hidden"

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 124.0
margin_right = 169.0
margin_bottom = 138.0
text = "FilePaths"
align = 2
